2011-09-11  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-pop-to-buffer): Default to switch-to-buffer.
	(message-mail-other-window, message-mail-other-frame)
	(message-news-other-window, message-news-other-frame): Use
	switch-to-buffer-other-frame and switch-to-buffer-other-window instead
	of setting buffer display varibles.

2011-09-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-list-limit): Explain what the command
	does.

	* gnus-sum.el (gnus-fetch-headers): Bump message level.

2011-09-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-dup.el (gnus-dup-suppress-articles): Move "Suppressing
	duplicates" to a higher level.

	* gnus-util.el (gnus-verbose): Lower default to 6 to get rid of the
	most egregious messages.

2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-summary-mail-forward): Minuscule doc fix.

2011-09-10  Tetsuo Tsukamoto  <tt.tetsuo.tsukamoto@gmail.com>  (tiny change)

	* nnrss.el (nnrss-retrieve-groups): Decode the charset before looking
	up the file (bug#9351).

2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el: Redo the charset handling.  Let Gnus encode the names, as
	it does with all other backends, but decode the names immediately after
	getting them.

	* gnus-group.el (gnus-group-name-charset): Always return `utf-7' when
	decoding nnimap groups.

	* gnus.el (gnus-variable-list): Don't save `gnus-format-specs' in the
	newsrc file.  It doesn't seem like an important optimisation any more.

2011-09-10  Dave Abrahams  <dave@boostpro.com>  (tiny change)

	* nnimap.el (nnimap-transform-headers): Fix regexp to be less prone to
	overflows.

2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-article-mark-lists): Remove `recent'.
	(gnus-interactive-exit): Extend to `quiet'.

	* gnus-sum.el (gnus-offer-save-summaries): Use it.

	* gnus-art.el (gnus-treat-hide-citation-maybe): Add more doc to the
	string.
